--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "ipfs-http-client": "^33.1.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-icons": "^4.2.0",
+    "react-pdf": "^5.2.0",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "web3": "^1.0.0-beta.37"
   },
   "scripts": {
     "start": "react-scripts start",
