--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Starter Kit",
-  "name": "Dapp University Starter Kit",
+  "short_name": "News",
+  "name": "News of the Day",
   "icons": [
     {
       "src": "favicon.ico",
